haproxy-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-proxy
  namespace: proxmox-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-proxy
  template:
    metadata:
      labels:
        app: haproxy-proxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:2.6
        args:
          - "-f"
          - "/usr/local/etc/haproxy/haproxy.cfg"
        volumeMounts:
        - name: haproxy-config
          mountPath: /usr/local/etc/haproxy
        ports:
        - containerPort: 443
      volumes:
      - name: haproxy-config
        configMap:
          name: haproxy-config
