haproxy-proxy/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: haproxy-tools
  labels:
    app: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: haproxy-config
          mountPath: /usr/local/etc/haproxy/haproxy.cfg
          subPath: haproxy.cfg
        command: ["haproxy", "-f", "/usr/local/etc/haproxy/haproxy.cfg"]
      volumes:
      - name: haproxy-config
        configMap:
          name: haproxy-config
