haproxy-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-proxy
  namespace: proxmox-proxy
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30081
  selector:
    app: haproxy-proxy
